Run JUnit tests with restricted security permissions